more changes to cmake related things

--- a/Proj1/CMakeLists.txt
+++ b/Proj1/CMakeLists.txt
@@ -1,4 +1,14 @@
-include_directories(${CMAKE_SOURCE_DIR}/libcs5651)
+cmake_minimum_required(VERSION 2.8)
+
+include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/CS5651Lib)
+link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/CS5651Lib)
+
+include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/build/CS5651Lib/)
+link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/build/CS5651Lib)
+
+include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/)
+link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/)
+
 
 ADD_EXECUTABLE( dnsresolver
   AddressNameMapper.h
@@ -6,6 +16,10 @@ ADD_EXECUTABLE( dnsresolver
   main.cpp
   )
 
+
+
 target_link_libraries(dnsresolver cs5651-util)
 
 target_link_libraries(dnsresolver ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+
+target_link_libraries(cs5651-util ${Boost_PROGRAM_OPTIONS_LIBRARIES})
