fix library linking! skeleton program runs

--- a/Proj1/CMakeLists.txt
+++ b/Proj1/CMakeLists.txt
@@ -1,22 +1,32 @@
 cmake_minimum_required(VERSION 2.8)
 
-include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/CS5651Lib)
-link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/CS5651Lib)
+project(NETWORKSPROJ1)
 
-include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/build/CS5651Lib/)
-link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/build/CS5651Lib)
+include_directories(${CMAKE_SOURCE_DIR}/libcs5651/CS5651Lib)
 
-include_directories(${CMAKE_SOURCE_DIR}/../libcs5651/)
-link_directories(${CMAKE_SOURCE_DIR}/../libcs5651/)
+add_subdirectory(libcs5651)
 
+
+SET (Boost_MULTITHREADED TRUE)
+
+# If you want to get more info on what the Find Boost macro is
+# doing...
+# SET(Boost_DEBUG 1)
+
+# Necessary to get Win32 version to work, plus, not a bad idea to link
+# statically for our purposes.
+SET(Boost_USE_STATIC_LIBS TRUE)
+
+FIND_PACKAGE(Boost REQUIRED date_time program_options system thread unit_test_framework)
+IF(${Boost_FOUND})
+  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+ENDIF()
 
 ADD_EXECUTABLE( dnsresolver
   AddressNameMapper.h
   AddressNameMapper.cpp
   main.cpp
   )
-
-
 
 target_link_libraries(dnsresolver cs5651-util)
 
