add debug flags, ip address lookup works

--- a/Proj1/CMakeLists.txt
+++ b/Proj1/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(${CMAKE_SOURCE_DIR}/libcs5651/CS5651Lib)
 
 add_subdirectory(libcs5651)
 
-
+SET(CMAKE_CXX_FLAGS "-g")
 SET (Boost_MULTITHREADED TRUE)
 
 # If you want to get more info on what the Find Boost macro is
