--- a/libcppSocket/CMakeLists.txt
+++ b/libcppSocket/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.8)
 
-add_library( libcppSocket ${LIB_TYPE}
+add_library( cppSocket ${LIB_TYPE}
   AddressNameMapper.cpp AddressNameMapper.h
   Socket.h Socket.cpp ServerSocket.h ServerSocket.cpp
   SocketException.h
@@ -8,6 +8,6 @@ add_library( libcppSocket ${LIB_TYPE}
   )
 
 ## This may be needed to install and use the library
-# FILE(GLOB files "*.h")
-# INSTALL(FILES ${files} DESTINATION include/util)
-# INSTALL(TARGETS cs5651-util LIBRARY ARCHIVE DESTINATION lib)
+ FILE(GLOB files "*.h")
+ INSTALL(FILES ${files} DESTINATION include/util)
+ INSTALL(TARGETS cppSocket LIBRARY ARCHIVE DESTINATION lib)
