--- a/Proj2/libcppSocket/libcppsocket/CMakeLists.txt
+++ b/Proj2/libcppSocket/libcppsocket/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required (VERSION 2.8)
 set(LIB_TYPE STATIC)
 
 add_library( cppSocket ${LIB_TYPE}
+  # put various library classes here
   AddressNameMapper.cpp AddressNameMapper.h
+  ClientSocket.h ClientSocket.cpp
   Socket.h Socket.cpp ServerSocket.h ServerSocket.cpp
   SocketException.h
-  # put various library classes here
   )
 
 ## This may be needed to install and use the library
