--- a/Proj2/CMakeLists.txt
+++ b/Proj2/CMakeLists.txt
@@ -35,6 +35,6 @@ target_link_libraries(socketServer cs5651-util)
 target_link_libraries(socketServer cppSocket)
 target_link_libraries(socketServer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
 
-target_link_libraries(socketClient cs5651-util)
-target_link_libraries(socketClient cppSocket)
-target_link_libraries(socketClient ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+target_link_libraries(clientTest cs5651-util)
+target_link_libraries(clientTest cppSocket)
+target_link_libraries(clientTest ${Boost_PROGRAM_OPTIONS_LIBRARIES})
