Add message buffer abstraction instead of sending strings around

--- a/Proj2/CMakeLists.txt
+++ b/Proj2/CMakeLists.txt
@@ -31,6 +31,10 @@ ADD_EXECUTABLE( clientTest
   socketClient.cpp
 )
 
+ADD_EXECUTABLE( u_MessageBuffer
+  test_MessageBuffer.cpp
+)
+
 target_link_libraries(socketServer cs5651-util)
 target_link_libraries(socketServer cppSocket)
 target_link_libraries(socketServer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
@@ -38,3 +42,7 @@ target_link_libraries(socketServer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
 target_link_libraries(clientTest cs5651-util)
 target_link_libraries(clientTest cppSocket)
 target_link_libraries(clientTest ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+
+target_link_libraries(u_MessageBuffer cs5651-util)
+target_link_libraries(u_MessageBuffer cppSocket)
+target_link_libraries(u_MessageBuffer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
