--- a/Proj2/libcppSocket/libcppsocket/CMakeLists.txt
+++ b/Proj2/libcppSocket/libcppsocket/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required (VERSION 2.8)
+SET(CMAKE_CXX_FLAGS "-g")
 
 set(LIB_TYPE STATIC)
 
@@ -7,7 +8,7 @@ add_library( cppSocket ${LIB_TYPE}
   AddressNameMapper.cpp AddressNameMapper.h
   ClientSocket.h ClientSocket.cpp
   Socket.h Socket.cpp ServerSocket.h ServerSocket.cpp
-  SocketException.h
+  SocketException.h  MessageBuffer.h MessageBuffer.cpp
   )
 
 ## This may be needed to install and use the library
