progress in http parsing, but tests fail

--- a/Proj2/CMakeLists.txt
+++ b/Proj2/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE_DIRECTORIES(libcppSocket/libcppsocket/)
 add_subdirectory(libcppSocket/libcppsocket/)
 add_subdirectory(libcs5651/CS5651Lib/)
 
-SET(CMAKE_CXX_FLAGS "-g")
+SET(CMAKE_CXX_FLAGS "-g -std=c++0x")
 SET (Boost_MULTITHREADED TRUE)
 
 # If you want to get more info on what the Find Boost macro is
@@ -18,7 +18,8 @@ SET (Boost_MULTITHREADED TRUE)
 # statically for our purposes.
 SET(Boost_USE_STATIC_LIBS TRUE)
 
-FIND_PACKAGE(Boost REQUIRED date_time program_options system thread unit_test_framework)
+FIND_PACKAGE(Boost REQUIRED date_time program_options system thread unit_test_framework regex)
+
 IF(${Boost_FOUND})
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 ENDIF()
@@ -41,16 +42,16 @@ ADD_EXECUTABLE( u_HttpParser
 
 target_link_libraries(socketServer cs5651-util)
 target_link_libraries(socketServer cppSocket)
-target_link_libraries(socketServer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+target_link_libraries(socketServer ${Boost_LIBRARIES})
 
 target_link_libraries(clientTest cs5651-util)
 target_link_libraries(clientTest cppSocket)
-target_link_libraries(clientTest ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+target_link_libraries(clientTest ${Boost_LIBRARIES})
 
 target_link_libraries(u_MessageBuffer cs5651-util)
 target_link_libraries(u_MessageBuffer cppSocket)
-target_link_libraries(u_MessageBuffer ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+target_link_libraries(u_MessageBuffer ${Boost_LIBRARIES})
 
 target_link_libraries(u_HttpParser cs5651-util)
 target_link_libraries(u_HttpParser cppSocket)
-target_link_libraries(u_HttpParser ${Boost_PROGRAM_OPTIONS_LIBRARIES})
+target_link_libraries(u_HttpParser ${Boost_LIBRARIES})
